refactor: add content to about page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,15 @@
-<h2>About</h2>
-<p>Add personal info</p>
-
+<div class="jumbo">
+    <div>
+        <h2>About</h2>
+        <p>
+            I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA.  I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
+        </p>
+        <ul>
+            <li>Twitter – @seetechnologic</li>
+            <li><a href="tel:561.236.9963">+1 (561) 236-9963</a><br></li>
+            <li>GitHub - <a href="https://github.com/JavaVista/"></a> </li>
+            <li>LinkedIn - Javier Carrion</li>
+        </ul>
+    </div>
+</div>
 {{outlet}}
