feat: add banner with link to about page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,4 @@
-<div class="jumbo">
+<div>
     <div>
         <h2>About</h2>
         <p>
@@ -11,5 +11,7 @@
             <li>LinkedIn - Javier Carrion</li>
         </ul>
     </div>
+    {{#link-to "index" class="button"}}
+        Home
+    {{/link-to}}
 </div>
-{{outlet}}
