--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,17 @@
-<h1>EmberJs-Project</h1>
-
-  {{#link-to "about" class="button"}}
-    About Me
-  {{/link-to}}
-
-{{outlet}}
+<div class="container">
+  <div class="menu">
+    {{#link-to "index"}}
+      <h1>
+        <em>EmberJs-Project</em>
+      </h1>
+    {{/link-to}}
+    <div class="links">
+      {{#link-to "about" class="menu-about"}}
+        About
+      {{/link-to}}
+    </div>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
+</div>
