--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,15 +2,19 @@
 {{outlet}}
 
 {{#each model as |post|}}
+<div class="listing">
     <h3>{{post.title}}</h3>
     <p>{{post.body}}</p>
 
     <p>User Name: {{post.userId.username}} </p>
     <p>Company: {{post.userId.company.name}}</p>
+    {{!-- TODO: Fix format --}}
     <p><a href="{{post.userId.website}}"></a></p>
     <p>Catchphrase: {{post.userId.company.catchPhrase}}</p>
 
     <p>Author's Name: {{post.userId.name}} </p>
+    {{!-- TODO: Fix format --}}
     <p><a href="mailto:{{post.userId.email}}"></a></p>
     <p>City: {{post.userId.address.city}} </p>
+</div>
 {{/each}}
