--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,20 +2,7 @@
 {{outlet}}
 
 {{#each pagedContent as |post|}}
-      <div class="listing">
-          <h3>{{post.title}}</h3>
-          <p>{{post.body}}</p>
-          <p>User Name: {{post.userId.username}} </p>
-          <p>Company: {{post.userId.company.name}}</p>
-            {{!-- TODO: Fix format --}}
-            <p><a href="{{post.userId.website}}"></a></p>
-            <p>Catchphrase: {{post.userId.company.catchPhrase}}</p>
-
-            <p>Author's Name: {{post.userId.name}} </p>
-            {{!-- TODO: Fix format --}}
-            <p><a href="mailto:{{post.userId.email}}"></a></p>
-            <p>City: {{post.userId.address.city}} </p>
-        </div>
+   <TheDetails @post={{post}} />
 {{/each}}
 
 {{page-numbers content=pagedContent}}
