--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -42,19 +42,11 @@ body {
     content: "show me";
   }
   .c-modal-manual {
-    position: fixed;
-    left: 50%;
-    top: 0;
-    width: 800px;
     padding: 20px;
     background: #666;
     overflow: hidden;
     box-sizing: border-box;
     transition: all 0.6s ease-in-out 0s;
-    -webkit-transform: translateX(-50%) scaleY(0);
-    -o-transform: translateX(-50%) scaleY(0);
-    -ms-transform: translateX(-50%) scaleY(0);
-    transform: translateX(-50%) scaleY(0);
     -webkit-transform-origin: top;
     -o-transform-origin: top;
     -ms-transform-origin: top;
@@ -62,7 +54,7 @@ body {
   }
   .c-modal-manual__content {
     line-height: 80px;
-    background: #dac;
+    background: #181818;
     color: #eee;
     text-align: center;
   }
