--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,17 +1,23 @@
 <div>
-    <div>
-        <h2>About</h2>
-        <p>
-            I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA.  I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
-        </p>
-        <ul>
-            <li>Twitter – @seetechnologic</li>
-            <li><a href="tel:561.236.9963">+1 (561) 236-9963</a><br></li>
-            <li>GitHub - <a href="https://github.com/JavaVista/"></a> </li>
-            <li>LinkedIn - Javier Carrion</li>
-        </ul>
+    <div class="md:flex">
+        <div class="md:flex-shrink-0">
+            <img class="rounded-lg md:w-56"
+                src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=448&q=80"
+                alt="Woman paying for a purchase">
+        </div>
+        <div class="mt-4 md:mt-0 md:ml-6">
+            <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">About</div>
+            <p class="mt-2 text-gray-600"> I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA. I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
+            </p>
+            <div>
+                <ul>
+                    <li>Twitter – @seetechnologic</li>
+                    <li><a href="tel:561.236.9963">+1 (561) 236-9963</a><br></li>
+                    <li>GitHub - <a href="https://github.com/JavaVista/"></a> </li>
+                    <li>LinkedIn - Javier Carrion</li>
+                </ul>
+            </div>
+
+        </div>
     </div>
-    {{#link-to "index" class="button"}}
-        Home
-    {{/link-to}}
 </div>
