--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,17 +1,31 @@
 {{!-- Banner --}}
 <div class="container">
-  <div class="menu">
-    {{#link-to "index"}}
-      <h1>
+  <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
+    <div class="flex items-center flex-shrink-0 text-black mr-6">
+       {{#link-to "index" class="button"}}
+              <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
+              {{/link-to}}
+    </div>
+  <div class="block lg:hidden">
+    <button class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white">
+      <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+    </button>
+  </div>
+
+      {{#link-to "index"}}
+      <h1 class="font-sans font-semibold  tracking-tight">
         <em>EmberJs-Project</em>
       </h1>
-    {{/link-to}}
-    <div class="links">
-      {{#link-to "about" class="menu-about"}}
-        About
       {{/link-to}}
-    </div>
-  </div>
+      <div class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">
+        {{#link-to "about" class="menu-about"}}
+        About
+        {{/link-to}}
+      </div>
+
+  </nav>
+
+
   <div class="body">
     {{outlet}}
   </div>
