--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,4 +1,5 @@
-<h2>Titles</h2>
+<div class="font-sans font-bold text-basesm:text-lg md:text-xl lg:text-2xl xl:text-3xl"><h2>Titles</h2></div>
+<div class="font-sans mx-auto my-4 sm:text-lg text-base">
 {{outlet}}
 
 {{#each pagedContent as |post|}}
@@ -6,3 +7,4 @@
 {{/each}}
 
 {{page-numbers content=pagedContent}}
+</div>
