style: fix stying issues and resposiveness

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,20 +1,21 @@
 <div>
-    <div class="md:flex">
+    <div class="md:flex pl-8">
         <div class="md:flex-shrink-0">
             <img class="rounded-lg md:w-56"
-                src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=448&q=80"
+                src="https://secure.gravatar.com/avatar/93d34c5c60977bb53bfbe4a4f805ce4f?s=200"
                 alt="Woman paying for a purchase">
         </div>
         <div class="mt-4 md:mt-0 md:ml-6">
-            <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">About</div>
-            <p class="mt-2 text-gray-600"> I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA. I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
+            <div class="uppercase tracking-wide text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-sans font-bold">About</div>
+            <p class="mt-2 "> 
+                I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA. I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
             </p>
             <div>
-                <ul>
+                <ul class="pt-2">
                     <li>Twitter – @seetechnologic</li>
                     <li><a href="tel:561.236.9963">+1 (561) 236-9963</a><br></li>
-                    <li>GitHub - <a href="https://github.com/JavaVista/"></a> </li>
-                    <li>LinkedIn - Javier Carrion</li>
+                    <li>GitHub - <a href="https://github.com/JavaVista/">https://github.com/JavaVista/</a> </li>
+                    <li>LinkedIn - <a href="https://www.linkedin.com/in/technologic/">www.linkedin.com/in/technologic</a></li>
                 </ul>
             </div>
 
