--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,4 +1,4 @@
-<div class="font-sans font-bold text-basesm:text-lg md:text-xl lg:text-2xl xl:text-3xl"><h2>Titles</h2></div>
+<div class="font-sans font-bold text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl p-8 flex content-around flex-wrap"><h2>Titles</h2></div>
 <div class="font-sans mx-auto my-4 sm:text-lg text-base">
 {{outlet}}
 
