fix: detail list defect
When clicking on a list post item it will only work for the top
one the rest will not respond after a click. Changed the toggle
input checkbox back to a button.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,16 +6,21 @@
                 alt="Woman paying for a purchase">
         </div>
         <div class="mt-4 md:mt-0 md:ml-6">
-            <div class="uppercase tracking-wide text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-sans font-bold">About</div>
-            <p class="mt-2 "> 
-                I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA. I believe I possess the necessary skills and experience you are seeking and would make a valuable addition to your company.
+            <div
+                class="uppercase tracking-wide text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-sans font-bold">
+                About</div>
+            <p class="mt-2 ">
+                I read with interest your posting for Software Engineer - Front End - Unity Workflow at IZEA. I believe
+                I possess the necessary skills and experience you are seeking and would make a valuable addition to your
+                company.
             </p>
             <div>
                 <ul class="pt-2">
                     <li>Twitter – @seetechnologic</li>
-                    <li><a href="tel:561.236.9963">+1 (561) 236-9963</a><br></li>
+                    <li>Tel - <a href="tel:561.236.9963">(561) 236-9963</a><br></li>
                     <li>GitHub - <a href="https://github.com/JavaVista/">https://github.com/JavaVista/</a> </li>
-                    <li>LinkedIn - <a href="https://www.linkedin.com/in/technologic/">www.linkedin.com/in/technologic</a></li>
+                    <li>LinkedIn - <a
+                            href="https://www.linkedin.com/in/technologic/">www.linkedin.com/in/technologic</a></li>
                 </ul>
             </div>
 
