--- a/app/templates/components/the-details.hbs
+++ b/app/templates/components/the-details.hbs
@@ -1,20 +1,22 @@
 <div class="listing">
     <div class="container shadow-md md:w-3/5 mx-auto p-8 sm:p-6 md:p-4 lg:p-3 xl:p-3">
-        <h1>
+        <p>
             {{post.title}}
-            <input type="checkbox" name="modal-toggle" id="modal-toggle" class="modal-toggle" {{action this.toggleContent on='click' }}/>
-            <label class="content-start sm:content-end md:content-center lg:content-between xl:content-around" for="modal-toggle" onclick></label>
-        </h1>
+            <button
+                class="btn float-right clearfix bg-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0 text-gray-800 font-semibold py-1 px-1 border border-gray-400 rounded shadow"
+                type="button" {{action this.toggleContent on='click'}}>more...</button>
+        </p>
     </div>
 
 
     {{#if this.showPost}}
-        {{#transition-group transitionName="c"}}
-        <div class="c-modal-manual w-full md:w-3/5 mx-auto p-8 sm:text-lg md:text-xl lg:text-xl xl:text-2xl">
-            <div class="c-modal-manual__content ">
-                <div class="text-left sm:text-center md:text-right lg:text-justify xl:text-center p-4"><p>{{post.body}}</p>
-                </div>
-            <ul  class="pb-4 pt-4">
+    {{#transition-group transitionName="c-modal"}}
+    <div class="c-modal-manual shadow-md md:w-3/5 mx-auto p-8 sm:p-6 md:p-4 lg:p-3 xl:p-3">
+        <div class="c-modal-manual__content">
+            <div class="text-left sm:text-center md:text-right lg:text-justify xl:text-center p-4">
+                <p>{{post.body}}</p>
+            </div>
+            <ul class="pb-4 pt-4">
                 <li>
                     <p>User Name: {{post.userId.username}} </p>
                 </li>
@@ -39,8 +41,8 @@
                     <p>City: {{post.userId.address.city}} </p>
                 </li>
             </ul>
-            </div>
         </div>
-        {{/transition-group}}
+    </div>
+    {{/transition-group}}
     {{/if}}
 </div>
