--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,10 +1,10 @@
-<div class="font-sans font-bold text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl p-8 flex content-around flex-wrap"><h2>Titles</h2></div>
-<div class="font-sans mx-auto my-4 sm:text-lg text-base">
-{{outlet}}
 
-{{#each pagedContent as |post|}}
+<div class="container font-sans mx-auto my-4 sm:text-lg text-base">
+   {{outlet}}
+
+   {{#each pagedContent as |post|}}
    <TheDetails @post={{post}} />
-{{/each}}
+   {{/each}}
 
-{{page-numbers content=pagedContent}}
+   {{page-numbers content=pagedContent}}
 </div>
