--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 {{!-- Nav --}}
-<div class="container my-4 mx-auto">
+<div class="container my-4 mx-auto px-auto">
   <nav class="flex items-center justify-between flex-wrap bg-teal-500 ">
     <div class="flex items-center flex-shrink-0 text-black mr-6 p-8">
       {{#link-to "index" class="button"}}
