--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{!-- Nav --}}
-<div class="container my-4 mx-auto px-auto">
-  <nav class="flex items-center justify-between flex-wrap bg-teal-500 ">
-    <div class="flex items-center flex-shrink-0 text-black mr-6 p-8">
+<div class="container my-4 mx-auto px-4">
+  <nav class="max-w-lg mx-auto my-8 text-center bg-teal-500">
+    <div class="">
       {{#link-to "index" class="button"}}
       <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54"
         xmlns="http://www.w3.org/2000/svg">
